# FindFirst

./: Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml  build_server.yml  deploy.yml  playwright.yml  sonar.yml
alert_historian/: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml  sonar-project.properties
alert_historian/docs/: mvp_contract_v0_1.md
alert_historian/sample/: alerts.json
alert_historian/src/alert_historian/: __init__.py  __main__.py
alert_historian/src/alert_historian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alert_historian/src/alert_historian/cli/: main.py
alert_historian/src/alert_historian/config/: settings.py
alert_historian/src/alert_historian/ingestion/: imap_adapter.py  json_export_adapter.py  normalize.py  pipeline.py  schema.py
alert_historian/src/alert_historian/narrative/: __init__.py  chronicle.py  delta.py  vector_store.py
alert_historian/src/alert_historian/reporting/: daily_report.py
alert_historian/src/alert_historian/state/: __init__.py  store.py
alert_historian/src/alert_historian/sync/: __init__.py  engine.py  findfirst_client.py  mappers.py  retry.py
alert_historian/tests/integration/: test_narrative_pipeline.py  test_sync_engine.py
alert_historian/tests/unit/: test_keys_mapper.py  test_narrative.py  test_normalize.py  test_retry.py
frontend/: sonar-project.properties
frontend/__tests__/: app.test.tsx
frontend/tests_e2e/: setup.ts  teardown.ts
screenshot/: sonar-project.properties
server/: build.gradle  sonar-project.properties
(+2 files in other folders)
