[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-historian"
version = "0.1.0"
description = "Google Alerts narrative and FindFirst sync engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
